Complete Story 5.2: Privacy Policy & Terms of Service with Validation and Integration Tests
- Created V13 database migration for legal_documents table with versioning
- Implemented LegalDocument entity with DocumentType and LegalStatus enums
- Created LegalDocumentRepository with custom query methods
- Built LegalDocumentService with content validation and SHA-256 hashing
- Added REST endpoints: GET /api/legal/privacy-policy, GET /api/legal/terms-of-service
- Implemented content validation for privacy policy (6 required sections) and terms (5 sections)
- Updated SecurityConfig to allow public access to legal document endpoints
- Added LEGAL_DOCUMENT_UPDATED to AuditAction enum
- Created 17 comprehensive tests (8 unit + 9 integration), all passing
- Full test suite: 433 tests passing, 0 failures

Tests verified: versioning, validation, hashing, public access, audit logging